# bitum

./: .gitignore  API.md  README.md  config.py  main.py  requirements.txt  start.sh
api/: endpoints.py  error_handlers.py  jwt.py  util.py  validation_schemas.py
frontend/: endpoints.py
frontend/bitum-frontend/: Cargo.toml  index.html
frontend/bitum-frontend/src/: api.rs  components.rs  constants.rs  lib.rs  main.rs  routes.rs  texts.rs
frontend/bitum-frontend/src/api/: methods.rs  structs.rs
frontend/bitum-frontend/src/components/: bs_toast_wrapper.rs  chat_member.rs  chat_member_add_modal.rs  error_message.rs  footer.rs  header.rs  login_or_redirect.rs  message.rs  modal.rs  new_bot_modal.rs  new_chat_modal.rs  raw_html.rs  text_message.rs  toast_container.rs  toast_message.rs  toast_wrapper.rs
frontend/bitum-frontend/src/routes/: chat.rs  chats.rs  index.rs  login.rs  my_bots.rs  register.rs
frontend/bitum-frontend/static/css/: main.css
frontend/bitum-frontend/static_files/css/: main.css
models/events/: EventType.py  MemberAdded.py  MemberKicked.py  NewMessage.py  __init__.py
models/interfaces/: ApiError.py  Chat.py  ChatMember.py  ChatMessage.py  Event.py  ModelError.py  User.py  __init__.py
models/postgres/: __init__.py  database.py  models.py
