[package]
name = "bitum-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
gloo = "0.8.0"
gloo-net = "0.2.6"
gloo-timers = "0.2.6"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["File", "Blob", "FormData"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
